--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,7 +22,7 @@
         <!-- Flatpickr (calendar/date/time picker UI) -->
         <script type="text/javascript" src="/js/flatpickr.min.js"></script>
         <!-- Flickity (handles touch enabled carousels and sliders) -->
-        <!-- <script type="text/javascript" src="/js/flickity.pkgd.min.js"></script> -->
+        <script type="text/javascript" src="/js/flickity.pkgd.min.js"></script>
         <!-- jarallax (parallax effect and video backgrounds) -->
         <!-- <script type="text/javascript" src="/js/jarallax.min.js"></script> -->
         <!-- <script type="text/javascript" src="/js/jarallax-video.min.js"></script> -->
