--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,86 +1,71 @@
-<div id="main-nav" class="bg-white navbar-light">
-  <nav class="navbar navbar-expand-sm">
-    <a class="navbar-brand" href="/">
-      <img alt="errata.ai's logo" src="/img/logo.svg" class="logo" />
-    </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <i class="icon-menu h4"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a href="/" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="pagesDropdown"
-            role="button"
-            data-toggle="dropdown"
-            >Software</a
-          >
-          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-            <a class="dropdown-item" href="https://docs.errata.ai/vale-server/install/">
-              <span class="h6 mb-0">
-                Vale Server
-                <img
-                  alt="GitHub release"
-                  src="https://img.shields.io/github/release/errata-ai/vale-server.svg?label=%20&style=social"
-                />
-              </span>
+<div class="navbar-container">
+      <div class="bg-dark navbar-dark" data-sticky="top">
+        <div class="container">
+          <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="index.html">
+              <img alt="Wingman" src="/img/logo-white.svg" />
             </a>
-            <div class="dropdown-divider"></div>
-            <a
-              class="dropdown-item"
-              href="https://github.com/errata-ai/vale"
-              target="_blank"
-            >
-              <span class="h6 mb-0">
-                Vale CLI
-                <img
-                  alt="GitHub release"
-                  src="https://img.shields.io/github/release/errata-ai/vale.svg?label=%20&style=social"
-                />
-              </span>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a
-              class="dropdown-item"
-              href="https://vale-studio.errata.ai/"
-              target="_blank"
-            >
-              <span class="h6 mb-0">
-                Vale Studio
-                <img
-                  alt="GitHub release"
-                  src="https://img.shields.io/github/release/errata-ai/static-school.svg?label=%20&style=social"
-                />
-              </span>
-            </a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/manage"
-            >Manage</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/errata-ai"
-            ><i class="fab fa-github"></i> GitHub</a
-          >
-        </li>
-      </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <i class="icon-menu h4"></i>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a href="index.html" class="nav-link">Overview</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Pages</a>
+                  <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+
+                    <a class="dropdown-item" href="pages-landing.html">
+                      <span class="h6 mb-0">Landing Pages</span>
+                      <p class="text-small text-muted">Showcase your product in style</p>
+                    </a>
+
+                    <div class="dropdown-divider"></div>
+
+                    <a class="dropdown-item" href="pages-app.html">
+                      <span class="h6 mb-0">App Pages</span>
+                      <p class="text-small text-muted">Build detailed, functional web apps</p>
+                    </a>
+
+                    <div class="dropdown-divider"></div>
+
+                    <a class="dropdown-item" href="pages-inner.html">
+                      <span class="h6 mb-0">Inner Pages</span>
+                      <p class="text-small text-muted">Complete your online presence</p>
+                    </a>
+
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="componentsDropdown" role="button" data-toggle="dropdown">Components</a>
+                  <div class="dropdown-menu" aria-labelledby="componentsDropdown">
+
+                    <a class="dropdown-item" href="components-bootstrap.html">Bootstrap</a>
+
+                    <a class="dropdown-item" href="components-wingman.html">Wingman</a>
+
+                  </div>
+                </li>
+              </ul>
+
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a href="documentation/index.html" class="nav-link">Docs</a>
+                </li>
+                <li class="nav-item">
+                  <a href="documentation/changelog.html" class="nav-link">Changelog <span class="badge badge-secondary mr-2">v1.3.0</span></a>
+                </li>
+                <li class="nav-item d-flex align-items-center">
+                  <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-success">Purchase Now</a>
+                </li>
+              </ul>
+
+            </div>
+            <!--end nav collapse-->
+          </nav>
+        </div>
+        <!--end of container-->
+      </div>
     </div>
-    <!--end nav collapse-->
-  </nav>
-  <!--end of container-->
-</div>
