--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-              <img alt="Wingman" src="/img/logo-white.svg" />
+              <img alt="Wingman" src="/img/logo.svg" class="logo" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <i class="icon-menu h4"></i>
@@ -14,7 +14,7 @@
                   <a href="index.html" class="nav-link">Overview</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Pages</a>
+                  <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Tools</a>
                   <div class="dropdown-menu" aria-labelledby="pagesDropdown">
 
                     <a class="dropdown-item" href="pages-landing.html">
@@ -39,7 +39,7 @@
                   </div>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="componentsDropdown" role="button" data-toggle="dropdown">Components</a>
+                  <a class="nav-link dropdown-toggle" href="#" id="componentsDropdown" role="button" data-toggle="dropdown">Resources</a>
                   <div class="dropdown-menu" aria-labelledby="componentsDropdown">
 
                     <a class="dropdown-item" href="components-bootstrap.html">Bootstrap</a>
@@ -55,10 +55,7 @@
                   <a href="documentation/index.html" class="nav-link">Docs</a>
                 </li>
                 <li class="nav-item">
-                  <a href="documentation/changelog.html" class="nav-link">Changelog <span class="badge badge-secondary mr-2">v1.3.0</span></a>
-                </li>
-                <li class="nav-item d-flex align-items-center">
-                  <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-success">Purchase Now</a>
+                  <a href="documentation/changelog.html" class="nav-link">Changelog <span class="badge badge-secondary mr-2">v2.15.3</span></a>
                 </li>
               </ul>
 
