--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,3 +6,7 @@
 /*  in your page by adding a reference to assets/css/custom.css in the head of each page.
 /*
 */
+
+.bg-dark {
+  background-color: #1b1f23 !important;
+}
