--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,23 +5,24 @@
     <div class="row align-items-center">
       <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
         <h1 class="display-4">Your style, our editor</h1>
-        <p class="lead">
-          Meet Wingman, a robust suite of styled pages and components, powered by Bootstrap 4. The ideal starting point for product landing pages, stylish web-apps and complete company websites.
+        <p class="lead faded">
+          <b>Vale</b> is a command-line tool that brings code-like linting to prose. It's open source, customizable, and works many different applications.
         </p>
-        <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-success">Download for Mac</a>
-        <a href="pages-landing.html" class="btn btn-lg btn-link text-white">Start exploring <i class="icon-chevron-right"></i></a>
+        <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-success">Download now</a>
+        <a href="pages-landing.html" class="btn btn-lg btn-link text-white">Read the docs <i class="icon-chevron-right"></i></a>
       </div>
       <!--end of col-->
       <div class="col-12 col-md-6">
         <div class="main-carousel overflow-visible" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":true, "wrapAround":true, "autoPlay":5000, "imagesLoaded":true, "initialIndex":3, "draggable":false }'>
 
           <div class="carousel-cell col-11">
+
             <div class="card card-sm bg-gradient border-0">
               <a href="landing-1.html">
-                <img class="card-img-top" src="/img/apps/st2.png" alt="Sublime Text">
+                <img class="card-img-top" src="/img/apps/obsidian.png" alt="Obsidian">
               </a>
               <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">Sublime Text</a>
+                <a href="landing-1.html" class="h6 m-0">Obsidian</a>
                 <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
               </div>
             </div>
@@ -30,7 +31,7 @@
           <div class="carousel-cell col-11">
             <div class="card card-sm bg-gradient border-0">
               <a href="landing-1.html">
-                <img class="card-img-top" src="/img/apps/vs.png" alt="VS Code">
+                <img class="card-img-top" src="/img/apps/vscode.png" alt="VS Code">
               </a>
               <div class="card-footer d-flex justify-content-between bg-white">
                 <a href="landing-1.html" class="h6 m-0">VS Code</a>
@@ -38,6 +39,31 @@
               </div>
             </div>
           </div>
+
+          <div class="carousel-cell col-11">
+            <div class="card card-sm bg-gradient border-0">
+              <a href="landing-1.html">
+                <img class="card-img-top" src="/img/apps/confluence.png" alt="Confluence">
+              </a>
+              <div class="card-footer d-flex justify-content-between bg-white">
+                <a href="landing-1.html" class="h6 m-0">Confluence</a>
+                <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-cell col-11">
+            <div class="card card-sm bg-gradient border-0">
+              <a href="landing-1.html">
+                <img class="card-img-top" src="/img/apps/github.png" alt="GitHub">
+              </a>
+              <div class="card-footer d-flex justify-content-between bg-white">
+                <a href="landing-1.html" class="h6 m-0">GitHub Actions</a>
+                <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
       <!--end of col-->
@@ -46,4 +72,74 @@
   </div>
   <!--end of container-->
 </section>
+
+ <section>
+        <div class="container">
+          <div class="row justify-content-center text-center section-intro">
+            <div class="col-12 col-md-9 col-lg-8">
+              <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">Meet Wingman</span>
+              <h2 class="display-4" data-aos="fade-up" data-aos-delay="100">Attractive from every angle</h2>
+              <span class="lead" data-aos="fade-up" data-aos-delay="200">Wingman delivers a seamless user experience, offering visual consistency for your brand, from landing to logged-in</span>
+
+            </div>
+            <!--end of col-->
+          </div>
+          <!--end of row-->
+
+          <ul class="row feature-list feature-list-sm">
+            <li class="col-12 col-md-4">
+              <a href="pages-landing.html" class="card">
+                <img alt="Image" src="assets/img/overview/landing-9-hero.jpg" class="img-fluid rounded" />
+              </a>
+              <h5>Landing Pages</h5>
+              <p>
+                Impress potential customers and introduce your product using Wingman’s diverse, purpose-built landing pages
+              </p>
+              <a href="pages-landing.html">Explore Landing Pages &rsaquo;</a>
+            </li>
+            <!--end of col-->
+            <li class="col-12 col-md-4">
+              <a href="pages-app.html" class="card">
+                <img alt="Image" src="assets/img/overview/app-profile-social-hero.jpg" class="img-fluid rounded" />
+              </a>
+              <h5>App Pages</h5>
+              <p>
+                A robust suite of styled app pages and flexible Bootstrap-based components makes Wingman ideal for building Apps
+              </p>
+              <a href="pages-app.html">Explore App Pages &rsaquo;</a>
+            </li>
+            <!--end of col-->
+            <li class="col-12 col-md-4">
+              <a href="pages-inner.html" class="card">
+                <img alt="Image" src="assets/img/overview/company-simple-hero.jpg" class="img-fluid rounded" />
+              </a>
+              <h5>Inner Pages</h5>
+              <p>
+                Landing pages are just the beginning. Wingman includes a collection of detailed inner pages to complete your online presence.
+              </p>
+              <a href="pages-inner.html">Explore Inner Pages &rsaquo;</a>
+            </li>
+            <!--end of col-->
+          </ul>
+          <!--end of row-->
+        </div>
+        <!--end of container-->
+      </section>
+
+      <section class="bg-gradient p-0 text-white">
+        <svg class="decorative-divider" preserveAspectRatio="none" viewbox=" 0 0 100 100">
+          <polygon fill="#F8F9FB" points="0 0 100 0 100 100"></polygon>
+        </svg>
+        <div class="container space-lg">
+          <div class="row text-center">
+            <div class="col">
+              <h3 class="h1">Start building feature-rich websites</h3>
+              <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-light">Purchase Now</a>
+            </div>
+            <!--end of col-->
+          </div>
+          <!--end of row-->
+        </div>
+        <!--end of container-->
+      </section>
 {{ end }}
