--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,7 +9,10 @@
     <meta name="description" content="{{ .Site.Params.description }}">
     {{ end }}
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"> -->
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
@@ -17,7 +20,7 @@
     <link href="/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/theme.css" rel="stylesheet" type="text/css" media="all" />
 
-    <!-- <link href="/css/custom.css" rel="stylesheet" type="text/css" media="all" /> -->
+    <link href="/css/custom.css" rel="stylesheet" type="text/css" media="all" />
 
     {{- range .Params.css }}
       <link rel="stylesheet" href="/css/{{ . }}">
