--- a/layouts/index.html
+++ b/layouts/index.html
@@ -74,72 +74,78 @@
 </section>
 
  <section>
-        <div class="container">
-          <div class="row justify-content-center text-center section-intro">
-            <div class="col-12 col-md-9 col-lg-8">
-              <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">Meet Wingman</span>
-              <h2 class="display-4" data-aos="fade-up" data-aos-delay="100">Attractive from every angle</h2>
-              <span class="lead" data-aos="fade-up" data-aos-delay="200">Wingman delivers a seamless user experience, offering visual consistency for your brand, from landing to logged-in</span>
+  <div class="container">
+    <div class="row justify-content-center text-center section-intro">
+      <div class="col-12 col-md-9 col-lg-8">
+        <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">Why Vale</span>
+        <h2 data-aos="fade-up" data-aos-delay="100">Attractive from every angle</h2>
+        <span class="lead" data-aos="fade-up" data-aos-delay="200">Wingman delivers a seamless user experience, offering visual consistency for your brand, from landing to logged-in</span>
 
-            </div>
-            <!--end of col-->
-          </div>
-          <!--end of row-->
+      </div>
+      <!--end of col-->
+    </div>
+    <!--end of row-->
 
-          <ul class="row feature-list feature-list-sm">
-            <li class="col-12 col-md-4">
-              <a href="pages-landing.html" class="card">
-                <img alt="Image" src="assets/img/overview/landing-9-hero.jpg" class="img-fluid rounded" />
-              </a>
-              <h5>Landing Pages</h5>
-              <p>
-                Impress potential customers and introduce your product using Wingman’s diverse, purpose-built landing pages
-              </p>
-              <a href="pages-landing.html">Explore Landing Pages &rsaquo;</a>
-            </li>
-            <!--end of col-->
-            <li class="col-12 col-md-4">
-              <a href="pages-app.html" class="card">
-                <img alt="Image" src="assets/img/overview/app-profile-social-hero.jpg" class="img-fluid rounded" />
-              </a>
-              <h5>App Pages</h5>
-              <p>
-                A robust suite of styled app pages and flexible Bootstrap-based components makes Wingman ideal for building Apps
-              </p>
-              <a href="pages-app.html">Explore App Pages &rsaquo;</a>
-            </li>
-            <!--end of col-->
-            <li class="col-12 col-md-4">
-              <a href="pages-inner.html" class="card">
-                <img alt="Image" src="assets/img/overview/company-simple-hero.jpg" class="img-fluid rounded" />
-              </a>
-              <h5>Inner Pages</h5>
-              <p>
-                Landing pages are just the beginning. Wingman includes a collection of detailed inner pages to complete your online presence.
-              </p>
-              <a href="pages-inner.html">Explore Inner Pages &rsaquo;</a>
-            </li>
-            <!--end of col-->
-          </ul>
-          <!--end of row-->
+    <ul class="row feature-list feature-list-sm">
+      <li class="col-12 col-md-4">
+        <h5><i class="icon-cog h1 text-success"></i> Customizable</h5>
+        <p>
+          Impress potential customers and introduce your product using Wingman’s diverse, purpose-built landing pages
+        </p>
+        <a href="pages-landing.html">Explore Landing Pages &rsaquo;</a>
+      </li>
+      <!--end of col-->
+      <li class="col-12 col-md-4">
+        <h5><i class="icon-lock h1 text-success"></i> Private</h5>
+        <p>
+           Vale runs entirely offline&mdash;ensuring that your 
+           content is never sent to a remote server for processing.
+        </p>
+        <a href="pages-app.html">Explore App Pages &rsaquo;</a>
+      </li>
+      <!--end of col-->
+      <li class="col-12 col-md-4">
+        <h5><i class="icon-box h1 text-success"></i> Self-contained</h5>
+        <p>
+          Landing pages are just the beginning. Wingman includes a collection of detailed inner pages to complete your online presence.
+        </p>
+        <a href="pages-inner.html">Explore Inner Pages &rsaquo;</a>
+      </li>
+      <!--end of col-->
+    </ul>
+    <!--end of row-->
+  </div>
+  <!--end of container-->
+</section>
+
+<section class="bg-white p-0">
+  <svg class="decorative-divider" preserveAspectRatio="none" viewbox=" 0 0 100 100">
+    <polygon fill="#F8F9FB" points="0 0 100 0 100 100"></polygon>
+  </svg>
+  <div class="container space-lg">
+    <div class="row text-center">
+      <div id="oc" class="col">
+        <h2 data-aos="fade-up" data-aos-delay="100">Sponsors &amp; Supporters</h2>
+        <div class="d-none d-lg-block">
+          <script src="https://opencollective.com/vale/banner.js"></script>
         </div>
-        <!--end of container-->
-      </section>
-
-      <section class="bg-gradient p-0 text-white">
-        <svg class="decorative-divider" preserveAspectRatio="none" viewbox=" 0 0 100 100">
-          <polygon fill="#F8F9FB" points="0 0 100 0 100 100"></polygon>
-        </svg>
-        <div class="container space-lg">
-          <div class="row text-center">
-            <div class="col">
-              <h3 class="h1">Start building feature-rich websites</h3>
-              <a href="https://themes.getbootstrap.com/product/wingman-landing-page-app-template" class="btn btn-lg btn-light">Purchase Now</a>
-            </div>
-            <!--end of col-->
-          </div>
-          <!--end of row-->
-        </div>
-        <!--end of container-->
-      </section>
+        <div class="d-lg-none">
+          <a href="https://opencollective.com/vale/organization/0/website"><img src="https://opencollective.com/vale/organization/0/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/1/website"><img src="https://opencollective.com/vale/organization/1/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/2/website"><img src="https://opencollective.com/vale/organization/2/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/3/website"><img src="https://opencollective.com/vale/organization/3/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/4/website"><img src="https://opencollective.com/vale/organization/4/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/5/website"><img src="https://opencollective.com/vale/organization/5/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/6/website"><img src="https://opencollective.com/vale/organization/6/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/7/website"><img src="https://opencollective.com/vale/organization/7/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/8/website"><img src="https://opencollective.com/vale/organization/8/avatar.svg?avatarHeight=100"></a>
+          <a href="https://opencollective.com/vale/organization/9/website"><img src="https://opencollective.com/vale/organization/9/avatar.svg?avatarHeight=100"></a>
+      </div>
+      </div>
+      <!--end of col-->      
+    </div>
+    <!--end of row-->
+  </div>
+  <!--end of container-->
+</section>
 {{ end }}
