--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,10 +11,13 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a href="index.html" class="nav-link">Overview</a>
+                  <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a href="index.html" class="nav-link">Docs</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Tools</a>
+                  <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Resources</a>
                   <div class="dropdown-menu" aria-labelledby="pagesDropdown">
 
                     <a class="dropdown-item" href="pages-landing.html">
@@ -38,24 +41,17 @@
 
                   </div>
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="componentsDropdown" role="button" data-toggle="dropdown">Resources</a>
-                  <div class="dropdown-menu" aria-labelledby="componentsDropdown">
-
-                    <a class="dropdown-item" href="components-bootstrap.html">Bootstrap</a>
-
-                    <a class="dropdown-item" href="components-wingman.html">Wingman</a>
-
-                  </div>
-                </li>
               </ul>
 
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a href="documentation/index.html" class="nav-link">Docs</a>
+                  <a href="documentation/index.html" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
                 </li>
                 <li class="nav-item">
-                  <a href="documentation/changelog.html" class="nav-link">Changelog <span class="badge badge-secondary mr-2">v2.15.3</span></a>
+                  <a href="documentation/changelog.html" class="nav-link"><i class="fab fa-slack fa-lg"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a href="documentation/changelog.html" class="nav-link"><i class="fab fa-discord fa-lg"></i></a>
                 </li>
               </ul>
 
