--- a/layouts/index.html
+++ b/layouts/index.html
@@ -126,10 +126,10 @@
     <div class="row text-center">
       <div id="oc" class="col">
         <h2 data-aos="fade-up" data-aos-delay="100">Sponsors &amp; Supporters</h2>
-        <div class="d-none d-lg-block">
+        <div class="d-none d-xl-block">
           <script src="https://opencollective.com/vale/banner.js"></script>
         </div>
-        <div class="d-lg-none">
+        <div class="d-xl-none">
           <a href="https://opencollective.com/vale/organization/0/website"><img src="https://opencollective.com/vale/organization/0/avatar.svg?avatarHeight=100"></a>
           <a href="https://opencollective.com/vale/organization/1/website"><img src="https://opencollective.com/vale/organization/1/avatar.svg?avatarHeight=100"></a>
           <a href="https://opencollective.com/vale/organization/2/website"><img src="https://opencollective.com/vale/organization/2/avatar.svg?avatarHeight=100"></a>
@@ -140,7 +140,10 @@
           <a href="https://opencollective.com/vale/organization/7/website"><img src="https://opencollective.com/vale/organization/7/avatar.svg?avatarHeight=100"></a>
           <a href="https://opencollective.com/vale/organization/8/website"><img src="https://opencollective.com/vale/organization/8/avatar.svg?avatarHeight=100"></a>
           <a href="https://opencollective.com/vale/organization/9/website"><img src="https://opencollective.com/vale/organization/9/avatar.svg?avatarHeight=100"></a>
-      </div>
+        </div>
+        <div class="d-none d-lg-block d-xl-none">
+          <a href="https://opencollective.com/vale"><img src="https://opencollective.com/vale/individuals.svg?width=890"></a>
+        </div>
       </div>
       <!--end of col-->      
     </div>
