--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <section class="space-lg bg-dark overflow-hidden">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row align-items-center">
       <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
         <h1 class="display-4">Your style, our editor</h1>
@@ -77,10 +77,11 @@
   <div class="container">
     <div class="row justify-content-center text-center section-intro">
       <div class="col-12 col-md-9 col-lg-8">
-        <span class="title-decorative" data-aos="fade-up" data-aos-delay="10">Why Vale</span>
-        <h2 data-aos="fade-up" data-aos-delay="100">Attractive from every angle</h2>
-        <span class="lead" data-aos="fade-up" data-aos-delay="200">Wingman delivers a seamless user experience, offering visual consistency for your brand, from landing to logged-in</span>
-
+        <h2 data-aos="fade-up" data-aos-delay="100">Why Vale</h2>
+        <span class="lead" data-aos="fade-up" data-aos-delay="200">
+          Vale offers an unmatched combination of speed, privacy, and 
+          extensiblity.
+        </span>
       </div>
       <!--end of col-->
     </div>
@@ -88,11 +89,20 @@
 
     <ul class="row feature-list feature-list-sm">
       <li class="col-12 col-md-4">
+        <h5><i class="icon-box h1 text-success"></i> Self-contained</h5>
+        <p>
+          Vale is an easy-to-install, stand-alone binary. No more dealing with 
+          package managers and dependecies.
+        </p>
+        <a href="pages-inner.html">View installation options &rsaquo;</a>
+      </li>
+      <li class="col-12 col-md-4">
         <h5><i class="icon-cog h1 text-success"></i> Customizable</h5>
         <p>
-          Impress potential customers and introduce your product using Wingman’s diverse, purpose-built landing pages
+          Make Vale your own by creating custom rules and style guides. No
+          programming experience required.
         </p>
-        <a href="pages-landing.html">Explore Landing Pages &rsaquo;</a>
+        <a href="pages-landing.html">Create your own style guide &rsaquo;</a>
       </li>
       <!--end of col-->
       <li class="col-12 col-md-4">
@@ -101,15 +111,7 @@
            Vale runs entirely offline&mdash;ensuring that your 
            content is never sent to a remote server for processing.
         </p>
-        <a href="pages-app.html">Explore App Pages &rsaquo;</a>
-      </li>
-      <!--end of col-->
-      <li class="col-12 col-md-4">
-        <h5><i class="icon-box h1 text-success"></i> Self-contained</h5>
-        <p>
-          Landing pages are just the beginning. Wingman includes a collection of detailed inner pages to complete your online presence.
-        </p>
-        <a href="pages-inner.html">Explore Inner Pages &rsaquo;</a>
+        <a href="pages-app.html">Learn more &rsaquo;</a>
       </li>
       <!--end of col-->
     </ul>
