--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,6 +20,7 @@
     <link href="/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/theme.css" rel="stylesheet" type="text/css" media="all" />
 
+    <link href="/css/docs.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/custom.css" rel="stylesheet" type="text/css" media="all" />
 
     {{- range .Params.css }}
