--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,64 +1,64 @@
 <div class="navbar-container">
-      <div class="bg-dark navbar-dark" data-sticky="top">
-        <div class="container">
-          <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">
-              <img alt="Wingman" src="/img/logo.svg" class="logo" />
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <i class="icon-menu h4"></i>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a href="index.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a href="index.html" class="nav-link">Docs</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Resources</a>
-                  <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+  <div class="bg-dark navbar-dark" data-sticky="top">
+    <div class="container-fluid container-wide">
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="/">
+          <img alt="Wingman" src="/img/logo.svg" class="logo" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="icon-menu h4"></i>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="/getting-started/" class="nav-link">Docs</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Resources</a>
+              <div class="dropdown-menu" aria-labelledby="pagesDropdown">
 
-                    <a class="dropdown-item" href="pages-landing.html">
-                      <span class="h6 mb-0">Landing Pages</span>
-                      <p class="text-small text-muted">Showcase your product in style</p>
-                    </a>
+                <a class="dropdown-item" href="pages-landing.html">
+                  <span class="h6 mb-0">Landing Pages</span>
+                  <p class="text-small text-muted">Showcase your product in style</p>
+                </a>
 
-                    <div class="dropdown-divider"></div>
+                <div class="dropdown-divider"></div>
 
-                    <a class="dropdown-item" href="pages-app.html">
-                      <span class="h6 mb-0">App Pages</span>
-                      <p class="text-small text-muted">Build detailed, functional web apps</p>
-                    </a>
+                <a class="dropdown-item" href="pages-app.html">
+                  <span class="h6 mb-0">App Pages</span>
+                  <p class="text-small text-muted">Build detailed, functional web apps</p>
+                </a>
 
-                    <div class="dropdown-divider"></div>
+                <div class="dropdown-divider"></div>
 
-                    <a class="dropdown-item" href="pages-inner.html">
-                      <span class="h6 mb-0">Inner Pages</span>
-                      <p class="text-small text-muted">Complete your online presence</p>
-                    </a>
+                <a class="dropdown-item" href="pages-inner.html">
+                  <span class="h6 mb-0">Inner Pages</span>
+                  <p class="text-small text-muted">Complete your online presence</p>
+                </a>
 
-                  </div>
-                </li>
-              </ul>
+              </div>
+            </li>
+          </ul>
 
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a href="documentation/index.html" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
-                </li>
-                <li class="nav-item">
-                  <a href="documentation/changelog.html" class="nav-link"><i class="fab fa-slack fa-lg"></i></a>
-                </li>
-                <li class="nav-item">
-                  <a href="documentation/changelog.html" class="nav-link"><i class="fab fa-discord fa-lg"></i></a>
-                </li>
-              </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="documentation/index.html" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
+            </li>
+            <li class="nav-item">
+              <a href="documentation/changelog.html" class="nav-link"><i class="fab fa-slack fa-lg"></i></a>
+            </li>
+            <li class="nav-item">
+              <a href="documentation/changelog.html" class="nav-link"><i class="fab fa-discord fa-lg"></i></a>
+            </li>
+          </ul>
 
-            </div>
-            <!--end nav collapse-->
-          </nav>
         </div>
-        <!--end of container-->
-      </div>
+        <!--end nav collapse-->
+      </nav>
     </div>
+    <!--end of container-->
+  </div>
+</div>
