--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <section class="space-lg bg-dark overflow-hidden">
   <div class="container-fluid">
     <div class="row align-items-center">
-      <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
+      <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative text-center">
         <h1 class="display-4">Your style, our editor</h1>
         <p class="lead faded">
           <b>Vale</b> is a command-line tool that brings code-like linting to prose. It's open source, customizable, and works many different applications.
@@ -79,7 +79,7 @@
       <div class="col-12 col-md-9 col-lg-8">
         <h2 data-aos="fade-up" data-aos-delay="100">Why Vale</h2>
         <span class="lead" data-aos="fade-up" data-aos-delay="200">
-          Vale offers an unmatched combination of speed, privacy, and 
+          Vale offers an unmatched combination of speed, privacy, and
           extensiblity.
         </span>
       </div>
@@ -91,7 +91,7 @@
       <li class="col-12 col-md-4">
         <h5><i class="icon-box h1 text-success"></i> Self-contained</h5>
         <p>
-          Vale is an easy-to-install, stand-alone binary. No more dealing with 
+          Vale is an easy-to-install, stand-alone binary. No more dealing with
           package managers and dependecies.
         </p>
         <a href="pages-inner.html">View installation options &rsaquo;</a>
@@ -108,7 +108,7 @@
       <li class="col-12 col-md-4">
         <h5><i class="icon-lock h1 text-success"></i> Private</h5>
         <p>
-           Vale runs entirely offline&mdash;ensuring that your 
+           Vale runs entirely offline&mdash;ensuring that your
            content is never sent to a remote server for processing.
         </p>
         <a href="pages-app.html">Learn more &rsaquo;</a>
@@ -124,7 +124,7 @@
   <svg class="decorative-divider" preserveAspectRatio="none" viewbox=" 0 0 100 100">
     <polygon fill="#F8F9FB" points="0 0 100 0 100 100"></polygon>
   </svg>
-  <div class="container space-lg">
+  <div class="container-fluid">
     <div class="row text-center">
       <div id="oc" class="col">
         <h2 data-aos="fade-up" data-aos-delay="100">Sponsors &amp; Supporters</h2>
@@ -147,7 +147,7 @@
           <a href="https://opencollective.com/vale"><img src="https://opencollective.com/vale/individuals.svg?width=890"></a>
         </div>
       </div>
-      <!--end of col-->      
+      <!--end of col-->
     </div>
     <!--end of row-->
   </div>
