--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="navbar-container">
   <div class="bg-dark navbar-dark" data-sticky="top">
-    <div class="container-fluid container-wide">
-      <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid container-wide container-nav">
+      <nav class="navbar navbar-expand">
         <a class="navbar-brand" href="/">
           <img alt="Wingman" src="/img/logo.svg" class="logo" />
         </a>
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
+              <a href="/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="/getting-started/" class="nav-link">Docs</a>
