--- a/layouts/_default/docs.html
+++ b/layouts/_default/docs.html
@@ -11,9 +11,20 @@
       </nav>
     {{ end }}
 
-    <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
+    <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content my-2 my-md-0 docs" role="main">
       <div class="d-md-flex flex-md-row-reverse align-items-center justify-content-between">
-        <a class="btn btn-sm btn-bd-light my-2 my-md-0" href="{{ .Site.Params.repo }}/blob/v4-dev/site/content/{{ .Page.File.Path | replaceRE `\\` "/" }}" title="View and edit this file on GitHub" target="_blank" rel="noopener">View on GitHub</a>
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <label class="btn btn-secondary active">
+            <input type="radio" name="options" id="option1" checked> <i class="fab fa-windows"></i>
+          </label>
+          <label class="btn btn-secondary">
+            <input type="radio" name="options" id="option2"> <i class="fab fa-apple"></i>
+          </label>
+          <label class="btn btn-secondary">
+            <input type="radio" name="options" id="option3"> <i class="fab fa-linux"></i>
+          </label>
+        </div>
+        {{/*  <a class="btn btn-sm btn-bd-light my-2 my-md-0" href="{{ .Site.Params.repo }}/blob/v4-dev/site/content/{{ .Page.File.Path | replaceRE `\\` "/" }}" title="View and edit this file on GitHub" target="_blank" rel="noopener">View on GitHub</a>  */}}
         <h1 class="bd-title" id="content">{{ .Title | markdownify }}</h1>
       </div>
       <p class="bd-lead">{{ .Page.Params.Description | markdownify }}</p>
