--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,6 +21,8 @@
     <link href="/css/theme.css" rel="stylesheet" type="text/css" media="all" />
 
     <link href="/css/docs.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/css/callout.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/css/navbar.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/custom.css" rel="stylesheet" type="text/css" media="all" />
 
     {{- range .Params.css }}
