--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -8,7 +8,70 @@
 */
 
 body {
-  font-family: Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #222831;
+  text-align: left;
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: .5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+a {
+  color: #1264a3;
+}
+
+p {
+  max-width: 100% !important;
+}
+
+kbd {
+  padding: 3px 5px;
+  font: 13px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  line-height: normal;
+  line-height: 12px;
+  color: #555;
+  background-color: #fcfcfc;
+  border: 1px solid #ccc;
+  border-bottom-color: rgb(204, 204, 204);
+  border-bottom-color: #bbb;
+  border-radius: 3px;
+  box-shadow: inset 0 -1px 0 #bbb;
+}
+
+.docs a {
+  text-decoration: none;
+  transition: color 80ms ease-out, box-shadow 80ms ease-out;
+  border-bottom: 1px dashed rgba(18, 100, 163, .1);
+}
+
+.docs code {
+  background: #e8f5fa;
+  border: 1px solid rgba(11, 76, 140, .2);
+  border-radius: 4px;
+  color: #0b4c8c;
+  display: inline-block;
+  font-family: Menlo, Consolas, "Courier New", monospace;
+  font-size: 75%;
+  font-weight: 400;
+  padding: 0 4px;
+  white-space: normal;
 }
 
 .bd-title {
