--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div class="navbar-container">
-  <div class="bg-dark navbar-dark" data-sticky="top">
+  <div class="bg-dark navbar-dark position-fixed" data-sticky="top">
     <div class="container-fluid container-wide container-nav">
       <nav class="navbar navbar-expand">
         <a class="navbar-brand" href="/">
