--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,24 +23,33 @@
         <script type="text/javascript" src="/js/flatpickr.min.js"></script>
         <!-- Flickity (handles touch enabled carousels and sliders) -->
         <script type="text/javascript" src="/js/flickity.pkgd.min.js"></script>
+
         <!-- jarallax (parallax effect and video backgrounds) -->
         <!-- <script type="text/javascript" src="/js/jarallax.min.js"></script> -->
         <!-- <script type="text/javascript" src="/js/jarallax-video.min.js"></script> -->
         <!-- <script type="text/javascript" src="/js/jarallax-element.min.js"></script> -->
+
         <!-- ScrollMonitor (manages events for elements scrolling in and out of view) -->
         <script type="text/javascript" src="/js/scrollMonitor.js"></script>
         <!-- jQuery smartWizard facilitates steppable wizard content -->
         <script type="text/javascript" src="/js/jquery.smartWizard.min.js"></script>
         <!-- Smooth scroll (animation to links in-page)-->
         <script type="text/javascript" src="/js/smooth-scroll.polyfills.min.js"></script>
-        <!-- Prism (displays formatted code boxes) -->
-        <script type="text/javascript" src="/js/prism.js"></script>
+
         <script type="text/javascript" src="/js/zoom.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
 
         <!-- Required theme scripts (Do not remove) -->
         <script type="text/javascript" src="/js/theme.js"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js" integrity="sha256-sPB0F50YUDK0otDnsfNHawYmA5M0pjjUf4TvRJkGFrI=" crossorigin="anonymous"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
+        {{/*  <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>  */}}
+        <script>
+          hljs.highlightAll();
+        </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
 
         {{- range .Params.js }}
           <script src="/js/{{ . }}"></script>
@@ -55,6 +64,10 @@
           $('.popover-dismiss').popover({
             trigger: 'focus'
           })
+
+          document.addEventListener('DOMContentLoaded', function(event) {
+            anchors.add('.docs h1, .docs h2, .docs h3');
+          });
         </script>
     </body>
 </html>
