--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,6 +23,9 @@
     <link href="/css/docs.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/callout.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/navbar.css" rel="stylesheet" type="text/css" media="all" />
+
+    <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/github.min.css">
     <link href="/css/custom.css" rel="stylesheet" type="text/css" media="all" />
 
     {{- range .Params.css }}
