--- a/layouts/index.html
+++ b/layouts/index.html
@@ -77,11 +77,7 @@
   <div class="container">
     <div class="row justify-content-center text-center section-intro">
       <div class="col-12 col-md-9 col-lg-8">
-        <h2 data-aos="fade-up" data-aos-delay="100">Why Vale</h2>
-        <span class="lead" data-aos="fade-up" data-aos-delay="200">
-          Vale offers an unmatched combination of speed, privacy, and
-          extensiblity.
-        </span>
+        <h2>Why Vale</h2>
       </div>
       <!--end of col-->
     </div>
@@ -127,7 +123,7 @@
   <div class="container-fluid">
     <div class="row text-center">
       <div id="oc" class="col">
-        <h2 data-aos="fade-up" data-aos-delay="100">Sponsors &amp; Supporters</h2>
+        <h2>Sponsors &amp; Supporters</h2>
         <div class="d-none d-xl-block">
           <script src="https://opencollective.com/vale/banner.js"></script>
         </div>
