--- a/layouts/_default/docs.html
+++ b/layouts/_default/docs.html
@@ -11,7 +11,7 @@
       </nav>
     {{ end }}
 
-    <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content my-2 my-md-0 docs line-numbers" role="main">
+    <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content my-2 my-md-0 docs" role="main">
       <div class="d-md-flex flex-md-row-reverse align-items-center justify-content-between">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
           <label class="btn btn-secondary active">
@@ -28,9 +28,7 @@
         <h1 class="bd-title" id="content">{{ .Title | markdownify }}</h1>
       </div>
       <p class="bd-lead">{{ .Page.Params.Description | markdownify }}</p>
-      <div class="main-container">
         {{ .Content }}
-      </div>
     </main>
 
   </div>
