--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -41,9 +41,10 @@
         <script src="https://cdn.jsdelivr.net/npm/anchor-js/anchor.min.js"></script>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
-        {{/*  <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>  */}}
+        <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
         <script>
           hljs.highlightAll();
+          hljs.initLineNumbersOnLoad();
         </script>
 
         <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
