--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -1153,16 +1153,16 @@
   display: block;
   padding: .25rem .5rem;
   font-size: 65%;
-  color: #007bff;
-  background-color: #fff;
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #4e555b;
   border: 1px solid;
   border-radius: 0.25rem;
 }
 
 .btn-clipboard:hover,
 .btn-clipboard:focus {
-  color: #fff;
-  background-color: #007bff;
+  background-color: #545b62;
 }
 
 .bd-placeholder-img {
