--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,21 +21,21 @@
               <div class="dropdown-menu" aria-labelledby="pagesDropdown">
 
                 <a class="dropdown-item" href="pages-landing.html">
-                  <span class="h6 mb-0">Landing Pages</span>
-                  <p class="text-small text-muted">Showcase your product in style</p>
+                  <span class="h6 mb-0">Rule Explorer</span>
+                  <p class="text-small text-muted">Explore community-made rules for Vale</p>
                 </a>
 
                 <div class="dropdown-divider"></div>
 
                 <a class="dropdown-item" href="pages-app.html">
-                  <span class="h6 mb-0">App Pages</span>
+                  <span class="h6 mb-0">Knowledge Base</span>
                   <p class="text-small text-muted">Build detailed, functional web apps</p>
                 </a>
 
                 <div class="dropdown-divider"></div>
 
                 <a class="dropdown-item" href="pages-inner.html">
-                  <span class="h6 mb-0">Inner Pages</span>
+                  <span class="h6 mb-0">Community</span>
                   <p class="text-small text-muted">Complete your online presence</p>
                 </a>
 
