--- a/layouts/index.html
+++ b/layouts/index.html
@@ -124,10 +124,8 @@
     <div class="row text-center">
       <div id="oc" class="col">
         <h2>Sponsors &amp; Supporters</h2>
-        <div class="d-none d-xl-block">
-          <script src="https://opencollective.com/vale/banner.js"></script>
-        </div>
-        <div class="d-xl-none">
+        <div class="pb-2">
+          <span class="title-decorative">Companies</span>
           <a href="https://opencollective.com/vale/organization/0/website"><img src="https://opencollective.com/vale/organization/0/avatar.svg?avatarHeight=100"></a>
           <a href="https://opencollective.com/vale/organization/1/website"><img src="https://opencollective.com/vale/organization/1/avatar.svg?avatarHeight=100"></a>
           <a href="https://opencollective.com/vale/organization/2/website"><img src="https://opencollective.com/vale/organization/2/avatar.svg?avatarHeight=100"></a>
@@ -139,9 +137,88 @@
           <a href="https://opencollective.com/vale/organization/8/website"><img src="https://opencollective.com/vale/organization/8/avatar.svg?avatarHeight=100"></a>
           <a href="https://opencollective.com/vale/organization/9/website"><img src="https://opencollective.com/vale/organization/9/avatar.svg?avatarHeight=100"></a>
         </div>
-        <div class="d-none d-lg-block d-xl-none">
+
+        <div class="d-none d-lg-block">
+          <span class="title-decorative">Individuals</span>
           <a href="https://opencollective.com/vale"><img src="https://opencollective.com/vale/individuals.svg?width=890"></a>
         </div>
+      </div>
+      <!--end of col-->
+    </div>
+    <!--end of row-->
+  </div>
+  <!--end of container-->
+</section>
+
+<section>
+  <div class="container">
+    <div class="row justify-content-center text-center section-intro">
+      <div class="col-12 col-md-9 col-lg-8">
+        <h2 class="display-4">Bootstrap core + much more</h2>
+        <span class="lead">Wingman features full coverage of Bootstrap's core components plus a suite of additional time-saving features</span>
+
+      </div>
+      <!--end of col-->
+    </div>
+    <!--end of row-->
+
+    <div class="row justify-content-around align-items-center">
+      <div class="col-12 col-md-6 col-lg-5 order-md-2">
+        <ul class="nav" id="myTab" role="tablist">
+          <li>
+            <a class="active card" id="tab-1" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
+              <div class="card-body">
+                <h5>Modular &amp; Multi-Purpose</h5>
+                <p>
+                  Create pages rich in functionality with Wingman's array of modular widgets - carefully designed for a wide range of purposes.
+                </p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="card" id="tab-2" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
+              <div class="card-body">
+                <h5>Familiar Markup</h5>
+                <p>
+                  Based on the Bootstrap 4 codebase, Wingman's code is instantly familiar, easy to understand and a dream to extend.
+                </p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a class="card" id="tab-3" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">
+              <div class="card-body">
+                <h5>Purposeful Plug-ins</h5>
+                <p>
+                  Elegantly extending Bootstrap's core functionality with Wizards, Touch Sliders, Interface Icons and more.
+                </p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!--end of col-->
+      <div class="col-12 col-md-6 order-md-1">
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="tab-1">
+            <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-widgets.png" />
+          </div>
+          <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="tab-2">
+            <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-widgets.png" />
+          </div>
+          <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="tab-3">
+            <img alt="Image" class="img-fluid shadow" src="/img/graphic-intro-widgets.png" />
+          </div>
+        </div>
+      </div>
+      <!--end of col-->
+    </div>
+    <!--end of row-->
+    <div class="row justify-content-center text-center section-outro">
+      <div class="col-lg-4 col-md-5">
+        <h6>Detailed Overview</h6>
+        <p>Wingman's component index showcases the full breadth of features at a glance</p>
+        <a href="components-bootstrap.html">Start exploring &rsaquo;</a>
       </div>
       <!--end of col-->
     </div>
