--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,6 +11,10 @@ iframe {
   padding: 15px 0 15px 0;
 }
 
+.bg-primary {
+  background-color: #cdeac0 !important;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
