--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
                 <img class="card-img-top" src="/img/apps/obsidian.png" alt="Obsidian">
               </a>
               <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">Obsidian</a>
+                <a href="landing-1.html" class="h6 m-0">Vale + Obsidian</a>
                 <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
               </div>
             </div>
@@ -34,7 +34,7 @@
                 <img class="card-img-top" src="/img/apps/vscode.png" alt="VS Code">
               </a>
               <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">VS Code</a>
+                <a href="landing-1.html" class="h6 m-0">Vale + VS Code</a>
                 <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
               </div>
             </div>
@@ -46,7 +46,7 @@
                 <img class="card-img-top" src="/img/apps/confluence.png" alt="Confluence">
               </a>
               <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">Confluence</a>
+                <a href="landing-1.html" class="h6 m-0">Vale Server + Confluence</a>
                 <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
               </div>
             </div>
@@ -58,7 +58,7 @@
                 <img class="card-img-top" src="/img/apps/github.png" alt="GitHub">
               </a>
               <div class="card-footer d-flex justify-content-between bg-white">
-                <a href="landing-1.html" class="h6 m-0">GitHub Actions</a>
+                <a href="landing-1.html" class="h6 m-0">Vale + GitHub Actions</a>
                 <a target="_blank" href="landing-1.html" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
               </div>
             </div>
