--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,7 +28,7 @@
                 <div class="dropdown-divider"></div>
 
                 <a class="dropdown-item" href="pages-app.html">
-                  <span class="h6 mb-0">Knowledge Base</span>
+                  <span class="h6 mb-0">Config Showcase</span>
                   <p class="text-small text-muted">Build detailed, functional web apps</p>
                 </a>
 
